--- a/app/views/servicerequests/_partials/create.html
+++ b/app/views/servicerequests/_partials/create.html
@@ -44,6 +44,19 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="p-t p-b" style="margin-top: 2rem;">
+                                    <h6 title="Method of Communication used by Reporter">
+                                        Communication Method
+                                    </h6>
+                                </div>
+                                <div class="row m-b">
+                                    <div class="col-sm-1" ng-repeat="method in methods">
+                                      <div class="radio-custom radio-primary">
+                                        <input type="radio" ng-model="servicerequest.method.name" ng-value="method" name="method">
+                                        <label class="text-muted" title="Method of Communication used by Reporter">{{method}}</label>
+                                      </div>
+                                    </div>
+                                </div>
                                 <div class="p-t p-b m-t" style="margin-top: 4rem;">
                                     <h6>
                                         Issue Details
