--- a/app/views/dashboards/_partials/standings_filter.html
+++ b/app/views/dashboards/_partials/standings_filter.html
@@ -117,13 +117,29 @@
         </div>
       </div>
       <!-- end priority filters -->
+      <!-- start workspace filters -->
+      <div class="row m-t-md">
+        <div class="col-md-12">
+          <div class="p-a p-l-none">
+            <h6 class="m-a-0">
+              Workspace
+            </h6>
+          </div>
+        </div>
+        <div class="col-md-3" ng-repeat="workspace in workspaces">
+          <div class="checkbox-custom checkbox-primary p-a">
+            <input type="checkbox" checklist-model="filters.workspaces" checklist-value="workspace">
+            <label class="text-muted" title="{{workspace}}">{{workspace}}</label>
+          </div>
+        </div>
+      </div>
+      <!-- end workspace filters -->
     </div>
   </div>
   <!-- end filter body -->
   <!-- start filter footer -->
   <div class="modal-footer">
     <button class="btn btn-primary" ng-click="filter()">Filter</button>
-    <button class="btn btn-default" ng-click="filter(true)">Clear&nbsp;</button>
     <button class="btn btn-default" ng-click="$dismiss()">Cancel</button>
   </div>
   <!-- end footer filter -->
