enforce resolve to be controlled by permissions

--- a/app/views/_partials/aside.html
+++ b/app/views/_partials/aside.html
@@ -16,7 +16,7 @@
         <li class="nav-header hidden-folded">
           <span class="text-xs">Main</span>
         </li>
-        <li ui-sref-active="active" show-if-has-any-permit="servicerequest:create,, servicerequest:view">
+        <li ui-sref-active="active" show-if-has-any-permit="servicerequest:create, servicerequest:view">
           <a ui-sref="app.servicerequests.list" title="Issues & Service Request">
               <span class="nav-icon">
                   <i class="ion-chatbubble-working"></i>
