remove typo on overview reports

--- a/app/views/dashboards/overviews.html
+++ b/app/views/dashboards/overviews.html
@@ -59,7 +59,7 @@
           <div class="col-sm-12">
             <div class="box">
               <div class="box-header">
-                <h3>Issue per Area per Service</h3>
+                <h3>Issue per Service</h3>
                 <small class="block text-muted">
                                  Count of Reported Issues by Their Service
                                 </small>
