--- a/app/views/servicerequests/_partials/action_bar.html
+++ b/app/views/servicerequests/_partials/action_bar.html
@@ -1,5 +1,12 @@
 <!-- start servicerequest detail action bar -->
 <ul class="nav navbar-nav">
+  <li ng-if="servicerequest.operator === null" class="nav-item b-r p-r">
+    <a show-if-has-permit="servicerequest:attend" class="nav-link text-muted no-border" title="Click To Attend Issue" ng-click="onAttend()">
+            <span class="nav-text">
+                <i class="ion-ios-shuffle-strong"></i>
+            </span>
+        </a>
+  </li>
   <li class="nav-item">
     <a ng-if="mailTo" href="{{mailTo}}" class="nav-link text-muted" title="Send Issue to Area">
             <span class="nav-text">
