--- a/app/views/servicerequests/_partials/side_subnav.html
+++ b/app/views/servicerequests/_partials/side_subnav.html
@@ -28,7 +28,7 @@
                                 </a>
                             </li>
                             <li ng-class="{active:query.operator == null && query.$or == null && query.resolvedAt == null}" class="nav-item m-b-xs">
-                                <a ng-click="load({operator:null, resolvedAt:null, resetPage:true,reset:true})" class="nav-link text-muted block" title="Reported Issues Using Other Method Than Call Center">
+                                <a show-if-has-permit="servicerequest:attend" ng-click="load({operator:null, resolvedAt:null, resetPage:true, reset:true})" class="nav-link text-muted block" title="Reported Issues Using Other Method Than Call Center">
                                 Un-Attended
                                 </a>
                             </li>
