add priority set on service ui

--- a/app/views/servicerequests/_partials/detail.html
+++ b/app/views/servicerequests/_partials/detail.html
@@ -98,7 +98,7 @@
                         </span>
                         <!-- end representative -->
                         <!-- start assignee -->
-                        <span uib-dropdown auto-close="outsideClick" class="m-l">
+                        <span title="Assignee" uib-dropdown auto-close="outsideClick" class="m-l">
                             <span uib-dropdown-toggle class="text-muted font-size-12">Assignee: </span>
                         <span>{{servicerequest.assignee.name || 'N/A'}}</span>
                         <div ng-if="!servicerequest.resolvedAt" uib-dropdown-menu class="dropdown-menu w dropdown-menu-scale">
