--- a/app/views/services/_partials/detail.html
+++ b/app/views/services/_partials/detail.html
@@ -13,6 +13,7 @@
                     <form ng-submit="save()" name="serviceForm" role="form" autocomplete="off" novalidate>
                         <div class="box">
                             <div class="box-body">
+                                <!-- start service group -->
                                 <div class="m-b" title="Service Group">
                                     <div ng-show="!edit" class="form-group form-material floating">
                                         <input ng-disabled="!edit" ng-model="service.group.name" ng-required ng-minlength="2" type="text" name="group" class="form-control" />
@@ -23,6 +24,19 @@
                                         <label title="Group" class="floating-label">Group</label>
                                     </div>
                                 </div>
+                                <!-- end service group -->
+                                <!-- start service priority -->
+                                <div class="m-t-lg" title="Service Priority">
+                                    <div ng-show="!edit" class="form-group form-material floating">
+                                        <input ng-disabled="!edit" ng-model="service.priority.name" ng-required ng-minlength="2" type="text" name="priority" class="form-control" />
+                                        <label title="Priority" class="floating-label">Priority</label>
+                                    </div>
+                                    <div ng-show="edit" class="form-group form-material floating">
+                                        <oi-select oi-options="item.name for item in priorities track by item.id" ng-model="service.priority" placeholder="Select Priority" class="form-control"></oi-select>
+                                        <label title="Priority" class="floating-label">Priority</label>
+                                    </div>
+                                </div>
+                                <!-- end service priority -->
                                 <div class="m-t-lg" title="Service Code">
                                     <div class="form-group form-material floating">
                                         <input title="Service Code" ng-disabled="!edit" ng-model="service.code" ng-required ng-minlength="1" type="text" name="code" class="form-control" />
