allow flag a service as if it support external reporting methods

--- a/app/views/services/_partials/detail.html
+++ b/app/views/services/_partials/detail.html
@@ -66,6 +66,14 @@
                                         <label class="floating-label">Description</label>
                                     </div>
                                 </div>
+                                <div class="m-t-lg" title="External Reporting Method Support">
+                                    <div class="form-group form-material floating">
+                                        <div class="checkbox-custom checkbox-primary">
+                                          <input ng-show="edit" type="checkbox" ng-model="service.isExternal">
+                                          <label title="External Reporting Method Support">Support External Reporting Methods</label>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </form>
