--- a/app/views/servicerequests/_partials/detail.html
+++ b/app/views/servicerequests/_partials/detail.html
@@ -1,17 +1,17 @@
 <!-- start servicerequest details -->
 <div class="row-col">
-    <div class="white b-b bg">
-        <!-- start servicerequest detail action bar -->
-        <div ng-include="'views/servicerequests/_partials/action_bar.html'" class="navbar"></div>
-        <!-- end servicerequest details action bar -->
-    </div>
-    <!-- start servicerequest body -->
-    <div class="row-row" print-section>
-        <div class="row-body">
-            <div class="row-inner">
-                <div class="padding">
-                    <!-- start servicerequest service -->
-                    <h4 class="_600">
+  <div class="white b-b bg">
+    <!-- start servicerequest detail action bar -->
+    <div ng-include="'views/servicerequests/_partials/action_bar.html'" class="navbar"></div>
+    <!-- end servicerequest details action bar -->
+  </div>
+  <!-- start servicerequest body -->
+  <div class="row-row" print-section>
+    <div class="row-body">
+      <div class="row-inner">
+        <div class="padding">
+          <!-- start servicerequest service -->
+          <h4 class="_600">
                         <span title="Issue Nature">
                             {{servicerequest.service.name}}
                         </span> - 
@@ -35,126 +35,134 @@
                             </span>
                         </span>
                     </h4>
-                    <!-- end servicerequest service -->
-                    <div class="p-y">
-                        <div title="Reporter Name">
-                            <span class="text-muted font-size-12">From: </span>
-                            <span ng-click="filterByReporter(servicerequest.reporter.name, {'reporter.name':servicerequest.reporter.name, resolvedAt:null, operator:servicerequest.operator})">{{servicerequest.reporter.name}}</span>
-                        </div>
-                        <div title="Reporter Account Number">
-                            <span class="text-muted font-size-12">Account #: </span>
-                            <span ng-click="filterByReporter(servicerequest.reporter.account, {'reporter.account':servicerequest.reporter.account, resolvedAt:null, operator:servicerequest.operator})">{{servicerequest.reporter.account}}</span>
-                        </div>
-                        <div title="Reporter Phone Number">
-                            <span class="text-muted font-size-12">Phone #: </span>
-                            <span ng-click="filterByReporter(servicerequest.reporter.phone, {'reporter.phone':servicerequest.reporter.phone, resolvedAt:null, operator:servicerequest.operator})">{{servicerequest.reporter.phone}}</span>
-                        </div>
-                        <div title="Reporter Address">
-                            <span class="text-muted font-size-12">Address: </span>
-                            <span>{{servicerequest.address}}</span>
-                        </div>
-                    </div>
-                    <!-- start call details -->
-                    <div class="p-y b-t" ng-show="servicerequest.call.startedAt && servicerequest.call.endedAt">
-                        <span title="Call Start Time">
+          <!-- end servicerequest service -->
+          <div class="p-y">
+            <div title="Reporter Name">
+              <span class="text-muted font-size-12">From: </span>
+              <span ng-click="filterByReporter(servicerequest.reporter.name, {'reporter.name':servicerequest.reporter.name, resolvedAt:null, operator:servicerequest.operator})">{{servicerequest.reporter.name}}</span>
+            </div>
+            <div title="Reporter Account Number">
+              <span class="text-muted font-size-12">Account #: </span>
+              <span ng-click="filterByReporter(servicerequest.reporter.account, {'reporter.account':servicerequest.reporter.account, resolvedAt:null, operator:servicerequest.operator})">{{servicerequest.reporter.account}}</span>
+            </div>
+            <div title="Reporter Phone Number">
+              <span class="text-muted font-size-12">Phone #: </span>
+              <span ng-click="filterByReporter(servicerequest.reporter.phone, {'reporter.phone':servicerequest.reporter.phone, resolvedAt:null, operator:servicerequest.operator})">{{servicerequest.reporter.phone}}</span>
+            </div>
+            <div title="Reporter Address">
+              <span class="text-muted font-size-12">Address: </span>
+              <span>{{servicerequest.address}}</span>
+            </div>
+          </div>
+          <!-- start call details -->
+          <div class="p-y b-t" ng-show="servicerequest.call.startedAt && servicerequest.call.endedAt">
+            <span title="Call Start Time">
                             <span class="text-muted font-size-12">
                             Call Start:
                             </span>
-                        <span class="font-size-12">{{servicerequest.call.startedAt | date:'dd MMM yyyy hh:mm:ss a'}}</span>
-                        </span>
-                        <span title="Call End Time" class="p-l">
+            <span class="font-size-12">{{servicerequest.call.startedAt | date:'dd MMM yyyy hh:mm:ss a'}}</span>
+            </span>
+            <span title="Call End Time" class="p-l">
                             <span class="text-muted font-size-12">Call End: </span>
-                        <span class="font-size-12">{{servicerequest.call.endedAt | date:'dd MMM yyyy hh:mm:ss a'}}</span>
-                        </span>
-                        <span title="Call Duration" class="p-l">
+            <span class="font-size-12">{{servicerequest.call.endedAt | date:'dd MMM yyyy hh:mm:ss a'}}</span>
+            </span>
+            <span title="Call Duration" class="p-l">
                             <span class="text-muted font-size-12">Call Duration: </span>
-                        <span class="font-size-12">{{servicerequest.call.duration.human}}</span>
-                        </span>
-                    </div>
-                    <!-- end call details -->
-                    <!-- start resolve details -->
-                    <div class="p-b">
-                        <span title="Date Issue Reported">
+            <span class="font-size-12">{{servicerequest.call.duration.human}}</span>
+            </span>
+          </div>
+          <!-- end call details -->
+          <!-- start resolve details -->
+          <div class="p-b">
+            <span title="Date Issue Reported">
                             <span class="text-muted font-size-12">Reported: </span>
-                        <span class="font-size-12">{{servicerequest.createdAt | date:'dd MMM yyyy hh:mm:ss a'}}</span>
-                        </span>
-                        <span ng-if="servicerequest.resolvedAt" title="Date Issue Resolved" class="p-l">
+            <span class="font-size-12">{{servicerequest.createdAt | date:'dd MMM yyyy hh:mm:ss a'}}</span>
+            </span>
+            <span ng-if="servicerequest.resolvedAt" title="Date Issue Resolved" class="p-l">
                             <span class="text-muted font-size-12">Resolved: </span>
-                        <span class="font-size-12">{{servicerequest.resolvedAt | date:'dd MMM yyyy hh:mm:ss a'}}</span>
-                        </span>
-                        <span ng-if="servicerequest.resolvedAt" title="Time Taken To Resolve" class="p-l">
+            <span class="font-size-12">{{servicerequest.resolvedAt | date:'dd MMM yyyy hh:mm:ss a'}}</span>
+            </span>
+            <span ng-if="servicerequest.resolvedAt" title="Time Taken To Resolve" class="p-l">
                             <span class="text-muted font-size-12">TTR: </span>
-                        <span class="font-size-12"> 
+            <span class="font-size-12"> 
                                 {{servicerequest.ttr.human}}
                             </span>
-                        </span>
-                    </div>
-                    <!-- end resolve details -->
-                    <div class="p-y b-t">
-                        <!-- start representative -->
-                        <span title="Operator Responsible">
+            </span>
+          </div>
+          <!-- end resolve details -->
+          <div class="p-y b-t">
+            <!-- start representative -->
+            <span title="Operator Responsible">
                             <span class="text-muted font-size-12">Operator: </span>
-                        <span>{{servicerequest.operator.name}}</span>
-                        </span>
-                        <!-- end representative -->
-                        <!-- start assignee -->
-                        <span title="Assignee" uib-dropdown auto-close="outsideClick" class="m-l">
+            <span>{{servicerequest.operator.name}}</span>
+            </span>
+            <!-- end representative -->
+            <!-- start assignee -->
+            <span title="Assignee" uib-dropdown auto-close="outsideClick" class="m-l">
                             <span uib-dropdown-toggle class="text-muted font-size-12">Assignee: </span>
-                        <span>{{servicerequest.assignee.name || 'N/A'}}</span>
-                        <div ng-if="!servicerequest.resolvedAt" uib-dropdown-menu class="dropdown-menu w dropdown-menu-scale">
-                            <ul class="list no-border p-b">
-                                <li class="list-item" title="Type To Search Assignee">
-                                    <input ng-change="onSearchAssignees()" ng-model="search.party" type="text" class="form-control form-control-sm" placeholder="Search Assignee ...">
-                                </li>
-                                <li class="list-item" ng-repeat="assignee in assignees" ng-click="assign(assignee)">
-                                    <div class="list-body">
-                                        <div>
-                                            <a href="#">{{assignee.name}}</a>
-                                        </div>
-                                        <small class="text-muted text-ellipsis">
+            <span>{{servicerequest.assignee.name || 'N/A'}}</span>
+            <div ng-if="!servicerequest.resolvedAt" uib-dropdown-menu class="dropdown-menu w dropdown-menu-scale">
+              <ul class="list no-border p-b">
+                <li class="list-item" title="Type To Search Assignee">
+                  <input ng-change="onSearchAssignees()" ng-model="search.party" type="text" class="form-control form-control-sm" placeholder="Search Assignee ...">
+                </li>
+                <li class="list-item" ng-repeat="assignee in assignees" ng-click="assign(assignee)">
+                  <div class="list-body">
+                    <div>
+                      <a href="#">{{assignee.name}}</a>
+                    </div>
+                    <small class="text-muted text-ellipsis">
                                         {{assignee.relation.type}}
                                         </small>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                        </span>
-                        <!-- end assignee -->
-                        <span ng-if="!servicerequest.resolvedAt" uib-dropdown class="label primary m-l" title="Status" style="background-color:{{servicerequest.status.color}}">
+                  </div>
+                </li>
+              </ul>
+            </div>
+            </span>
+            <!-- end assignee -->
+            <span ng-if="!servicerequest.resolvedAt" uib-dropdown class="label primary m-l" title="Status" style="background-color:{{servicerequest.status.color}}">
                            <span uib-dropdown-toggle class="font-size-12 text-white">Status: {{servicerequest.status.name}} </span>
-                        <div uib-dropdown-menu class="dropdown-menu w dropdown-menu-scale">
-                            <a ng-repeat="status in statuses" ng-click="changeStatus(status)" class="dropdown-item" href="#" title="Status - {{status.name}}">
+            <div uib-dropdown-menu class="dropdown-menu w dropdown-menu-scale">
+              <a ng-repeat="status in statuses" ng-click="changeStatus(status)" class="dropdown-item" href="#" title="Status - {{status.name}}">
                                 <span>{{status.name}}</span>
                             </a>
-                        </div>
-                        </span>
-                        <span ng-if="!servicerequest.resolvedAt" uib-dropdown class="label danger m-l" title="Priority" style="background-color:{{servicerequest.priority.color}}">
+            </div>
+            </span>
+            <span ng-if="!servicerequest.resolvedAt" uib-dropdown class="label danger m-l" title="Priority" style="background-color:{{servicerequest.priority.color}}">
                             <span uib-dropdown-toggle class="font-size-12 text-white">Priority: {{servicerequest.priority.name}}</span>
-                        <div uib-dropdown-menu class="dropdown-menu w dropdown-menu-scale">
-                            <a ng-repeat="priority in priorities" ng-click="changePriority(priority)" class="dropdown-item" href="#" title="Priority {{priority.name}}">
+            <div uib-dropdown-menu class="dropdown-menu w dropdown-menu-scale">
+              <a ng-repeat="priority in priorities" ng-click="changePriority(priority)" class="dropdown-item" href="#" title="Priority {{priority.name}}">
                                 <span>{{priority.name}}</span>
                             </a>
-                        </div>
-                        </span>
-                        <span ng-if="servicerequest.resolvedAt" class="label danger m-l" style="background-color: #4CAF50;">
-                            <span class="font-size-12 text-white">Resolved</span>
-                        </span>
-                    </div>
-                </div>
-                <!-- start issue description -->
-                <div class="padding b-t">
-                    <h6 class="m-b" title="Issue Description">Description</h6>
-                    <p class="text-lt">
-                        {{servicerequest.description}}
-                    </p>
-                    <p>&nbsp;</p>
-                </div>
-                <!-- start issue comment -->
-                <div ng-include="'views/servicerequests/_partials/comments.html'"></div>
-                <!-- end issue comments -->
             </div>
+            </span>
+            <span ng-if="servicerequest.resolvedAt" class="label danger m-l" style="background-color: #4CAF50;">
+                            <span class="font-size-12 text-white">Resolved</span>
+            </span>
+          </div>
         </div>
+        <!-- start issue description -->
+        <div class="padding b-t">
+          <h6 class="m-b" title="Issue Description">Description</h6>
+          <p class="text-lt">
+            {{servicerequest.description}}
+          </p>
+          <p>&nbsp;</p>
+        </div>
+        <!-- end issue description -->
+        <!-- start issue map -->
+        <div class="padding b-t" ng-show="servicerequest.longitude && servicerequest.latitude">
+          <h6 class="m-b" title="Issue Map">Map</h6>
+          <leaflet id="servicerequest-map" center="map.center" markers="map.markers" bounds="map.bounds" height="280px" width="100%"></leaflet>
+          <p>&nbsp;</p>
+        </div>
+        <!-- end issue map -->
+        <!-- start issue comment -->
+        <div ng-include="'views/servicerequests/_partials/comments.html'"></div>
+        <!-- end issue comments -->
+      </div>
     </div>
-    <!-- end servicerequest body -->
+  </div>
+  <!-- end servicerequest body -->
 </div>
 <!-- end servicerequest details -->
