--- a/app/views/servicerequests/_partials/action_bar.html
+++ b/app/views/servicerequests/_partials/action_bar.html
@@ -1,6 +1,6 @@
 <!-- start servicerequest detail action bar -->
 <ul class="nav navbar-nav">
-  <li ng-if="servicerequest.operator === null" class="nav-item b-r p-r">
+  <li ng-if="!servicerequest.operator" class="nav-item b-r p-r">
     <a show-if-has-permit="servicerequest:attend" class="nav-link text-muted no-border" title="Click To Attend Issue" ng-click="onAttend()">
             <span class="nav-text">
                 <i class="ion-ios-shuffle-strong"></i>
