--- a/app/views/_partials/aside.html
+++ b/app/views/_partials/aside.html
@@ -1,97 +1,97 @@
 <!-- start aside -->
 <div class="navside" data-layout="column">
-  <!-- start brand details -->
-  <div class="navbar no-radius">
-    <a title="{{ENV.title}} | {{ENV.description}}" ui-sref="app.servicerequests.list" class="navbar-brand">
+    <!-- start brand details -->
+    <div class="navbar no-radius">
+        <a title="{{ENV.title}} | {{ENV.description}}" ui-sref="app.servicerequests.list" class="navbar-brand">
             <img src="images/logo_sm.png" alt="." width="48" class="m-t-sm">
             <span class="hidden-folded inline">open311</span>
         </a>
-  </div>
-  <!-- end brand details -->
-  <!-- start menu actions -->
-  <br/>
-  <div data-flex class="hide-scroll">
-    <nav class="scroll nav-stacked nav-stacked-rounded nav-color">
-      <ul class="nav" data-ui-nav>
-        <li class="nav-header hidden-folded">
-          <span class="text-xs">Main</span>
-        </li>
-        <li ui-sref-active="active" show-if-has-any-permit="servicerequest:create, servicerequest:view">
-          <a ui-sref="app.servicerequests.list" title="Issues & Service Request">
+    </div>
+    <!-- end brand details -->
+    <!-- start menu actions -->
+    <br/>
+    <div data-flex class="hide-scroll">
+        <nav class="scroll nav-stacked nav-stacked-rounded nav-color">
+            <ul class="nav" data-ui-nav>
+                <li class="nav-header hidden-folded">
+                    <span class="text-xs">Main</span>
+                </li>
+                <li ui-sref-active="active" show-if-has-any-permit="servicerequest:create, servicerequest:view">
+                    <a ui-sref="app.servicerequests.list" title="Issues & Service Request">
               <span class="nav-icon">
                   <i class="ion-chatbubble-working"></i>
               </span>
               <span class="nav-text">Issues</span>
           </a>
-        </li>
-        <li ui-sref-active="active" show-if-has-any-permit="servicerequest:create, servicerequest:edit">
-          <a ui-sref="app.create_servicerequests" ui-sref-opts="{reload: true}" title="Report New Issue or Service Request">
+                </li>
+                <li ui-sref-active="active" show-if-has-any-permit="servicerequest:create, servicerequest:edit">
+                    <a ui-sref="app.create_servicerequests" ui-sref-opts="{reload: true}" title="Report New Issue or Service Request">
               <span class="nav-icon">
                   <i class="ion-plus-circled"></i>
               </span>
               <span class="nav-text">New Issue</span>
           </a>
-        </li>
-        <li ui-sref-active="active" show-if-has-any-permit="jurisdiction:view, servicegroup:view, service:view, priority:view, status:view, user:view, role:view">
-          <a ui-sref="app.overviews" title="Overviews">
+                </li>
+                <li ui-sref-active="active" show-if-has-any-permit="jurisdiction:view, servicegroup:view, service:view, priority:view, status:view, user:view, role:view">
+                    <a ui-sref="app.overviews" title="Overviews">
               <span class="nav-icon">
                   <i class="ion-pie-graph"></i>
               </span>
               <span class="nav-text">Overviews</span>
           </a>
-        </li>
-        <li ui-sref-active="active" show-if-has-any-permit="jurisdiction:view, servicegroup:view, service:view, priority:view, status:view, user:view, role:view">
-          <a ui-sref="app.standings" title="Standings">
+                </li>
+                <li ui-sref-active="active" show-if-has-any-permit="jurisdiction:view, servicegroup:view, service:view, priority:view, status:view, user:view, role:view">
+                    <a ui-sref="app.standings" title="Standings">
               <span class="nav-icon">
                   <i class="ion-arrow-graph-up-right"></i>
               </span>
               <span class="nav-text">Standings</span>
           </a>
-        </li>
-        <li ui-sref-active="active" show-if-has-any-permit="jurisdiction:view, servicegroup:view, service:view, priority:view, status:view, user:view, role:view">
-          <a ui-sref="app.exports" title="Exports">
+                </li>
+                <li ui-sref-active="active" show-if-has-any-permit="jurisdiction:view, servicegroup:view, service:view, priority:view, status:view, user:view, role:view">
+                    <a ui-sref="app.exports" title="Exports">
               <span class="nav-icon">
                   <i class="ion-social-buffer"></i>
               </span>
               <span class="nav-text">Exports</span>
           </a>
-        </li>
-        <li show-if-has-any-permit="jurisdiction:view, servicegroup:view, service:view, priority:view, status:view, user:view, role:view" ui-sref-active="active">
-          <a ui-sref="app.manage.jurisdictions" title="Manage System">
+                </li>
+                <li show-if-has-any-permit="jurisdiction:view, servicegroup:view, service:view, priority:view, status:view, user:view, role:view" ui-sref-active="active">
+                    <a ui-sref="app.manage.jurisdictions" title="Manage System">
               <span class="nav-icon">
                   <i class="ion-gear-a"></i>
               </span>
               <span class="nav-text">Manage</span>
           </a>
-        </li>
-      </ul>
-    </nav>
-  </div>
-  <!-- end menu actions -->
-  <!-- start profile actions -->
-  <div data-flex-no-shrink>
-    <div uib-dropdown class="nav-fold dropup" title="{{party.name}}">
-      <a uib-dropdown-toggle data-toggle="dropdown">
-        <div class="pull-left">
-          <div class="inline">
-            <letter-avatar title="{{party.name}}" data="{{party.name}}" height="60" width="60" shape="round" class="avatar w-40">
-            </letter-avatar>
-          </div>
-        </div>
-      </a>
-      <div uib-dropdown-menu class="dropdown-menu w dropdown-menu-scale">
-        <!-- <a class="dropdown-item" href="#" title="My Profile">
+                </li>
+            </ul>
+        </nav>
+    </div>
+    <!-- end menu actions -->
+    <!-- start profile actions -->
+    <div data-flex-no-shrink>
+        <div uib-dropdown class="nav-fold dropup" title="{{party.name}}">
+            <a uib-dropdown-toggle data-toggle="dropdown">
+                <div class="pull-left">
+                    <div class="inline">
+                        <letter-avatar title="{{party.name}}" data="{{party.name}}" height="60" width="60" shape="round" class="avatar w-40">
+                        </letter-avatar>
+                    </div>
+                </div>
+            </a>
+            <div uib-dropdown-menu class="dropdown-menu w dropdown-menu-scale">
+                <a class="dropdown-item" ui-sref="app.profile" title="My Profile">
                     <span>Profile</span>
-                </a> -->
-        <!-- <a class="dropdown-item" ui-sref="app.manage.jurisdictions" title="System Settings">
+                </a>
+                <!-- <a class="dropdown-item" ui-sref="app.manage.jurisdictions" title="System Settings">
                     <span>Settings</span>
-                </a> -->
-        <a ng-show="isAuthenticated" ng-show="isAuthenticated" data-signout title="Signout" class="dropdown-item" title="Signout">
+        </a> -->
+                <a ng-show="isAuthenticated" ng-show="isAuthenticated" data-signout title="Signout" class="dropdown-item" title="Signout">
                     Sign out
                 </a>
-      </div>
+            </div>
+        </div>
     </div>
-  </div>
-  <!-- end profile actions -->
+    <!-- end profile actions -->
 </div>
 <!-- end aside -->
