--- a/app/views/auth/_partials/profile_summary.html
+++ b/app/views/auth/_partials/profile_summary.html
@@ -36,6 +36,7 @@
                             <i class="icon-phone"></i>
                             <i class="icon-phone indigo"></i>
                           </a>
+                          <!-- TODO should initiate call -->
                               <span title="Phone Number"  class="text-muted">
                                 {{party.phone ? party.phone : 'N/A'}}
                               </span>
@@ -45,6 +46,7 @@
                             <i class="icon-envelope"></i>
                             <i class="icon-envelope light-blue"></i>
                           </a>
+                          <!-- TODO should initiate email -->
                               <span title="Email Address" class="text-muted">
                                 {{party.email ? party.email : 'N/A'}}
                               </span>
