Add Design for operator profile for Work performed and hours spent

--- a/app/views/auth/_partials/service_request_pipelines.html
+++ b/app/views/auth/_partials/service_request_pipelines.html
@@ -1,6 +1,5 @@
 <!-- start service request pipeline -->
-<hr>
-<div class="p-a-lg">
+<div class="p-a-lg p-t-0">
     <!-- start header -->
     <div>
         <h4 title="Response Pipeline">Response Pipeline</h4>
