--- a/app/views/auth/_partials/service_request_durations.html
+++ b/app/views/auth/_partials/service_request_durations.html
@@ -12,62 +12,88 @@
     <div class="row m-t-lg">
         <div class="col-sm-6 col-md-4 col-lg-3">
             <div class="box p-a">
-                <div class="pull-left m-r"><span class="avatar w-40 text-center rounded primary"><span class="fa fa-dollar"></span></span>
+                <div class="box-header">
+                    <h2>Today</h2>
+                    <small>Number of Hours Spent on Attending Service Request</small>
+                    <div class="box-tool">
+                        <ul class="nav">
+                            <li class="nav-item inline">
+                                <a class="nav-link">
+                                  <i class="icon-reload"></i>
+                                </a>
+                            </li>
+                            <li class="nav-item inline">
+                                <a class="nav-link p-l-xs">
+                                  <i class="icon-frame"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="clear">
-                    <h4 class="m-a-0 text-md"><a href="#">75 <span class="text-sm">Sales</span></a></h4><small class="text-muted">6 waiting payment.</small></div>
-            </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="box p-a">
-                <div class="pull-left m-r"><span class="avatar w-40 text-center rounded info"><span class="fa fa-female"></span></span>
+                <div class="box-body">
+                    <h4 class="m-a-0 text-4x"><a href="#">
+                      00 <span class="text-sm text-muted">Hours</span>
+                      35 <span class="text-sm text-muted">Minutes</span></a>
+                    </h4>
                 </div>
-                <div class="clear">
-                    <h4 class="m-a-0 text-md"><a href="#">40 <span class="text-sm">Orders</span></a></h4><small class="text-muted">38 Shipped.</small></div>
             </div>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="col-sm-6 col-md-4 col-lg-3 offset-lg-1">
             <div class="box p-a">
-                <div class="pull-left m-r"><span class="avatar w-40 text-center rounded success"><span class="fa fa-bookmark"></span></span>
+                <div class="box-header">
+                    <h2>This Week</h2>
+                    <small>Number of Hours Spent on Attending Service Request</small>
+                    <div class="box-tool">
+                        <ul class="nav">
+                            <li class="nav-item inline">
+                                <a class="nav-link">
+                                  <i class="icon-reload"></i>
+                                </a>
+                            </li>
+                            <li class="nav-item inline">
+                                <a class="nav-link p-l-xs">
+                                  <i class="icon-frame"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="clear">
-                    <h4 class="m-a-0 text-md"><a href="#">6,000 <span class="text-sm">Members</span></a></h4><small class="text-muted">632 activities post.</small></div>
-            </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="box p-a">
-                <div class="pull-left m-r"><span class="avatar w-40 text-center rounded warning"><span class="fa fa-comment"></span></span>
+                <div class="box-body">
+                    <h4 class="m-a-0 text-4x">
+                        <a href="#">
+                          16 <span class="text-sm text-muted">Hours</span>
+                          24 <span class="text-sm text-muted">Minutes</span>
+                        </a>
+                    </h4>
                 </div>
-                <div class="clear">
-                    <h4 class="m-a-0 text-md"><a href="#">69 <span class="text-sm">Comments</span></a></h4><small class="text-muted">5 approved.</small></div>
             </div>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-3">
+        <div class="col-sm-6 col-md-4 col-lg-3 offset-lg-1">
             <div class="box p-a">
-                <div class="pull-right m-l"><span data-ui-jp="sparkline" data-ui-options="[70,30], {type:'pie', height:36, sliceColors:['#4BC0C0','transparent']}" class="sparkline inline"><canvas width="36" height="36" style="display: inline-block; width: 36px; height: 36px; vertical-align: top;"></canvas></span></div>
-                <div class="clear">
-                    <h4 class="m-a-0 text-md"><a href="#">70% <span class="text-sm">Bounce rate</span></a></h4><small class="text-muted">6 waiting payment.</small></div>
-            </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="box p-a">
-                <div class="pull-right m-l"><span data-ui-jp="sparkline" data-ui-options="[40,60], {type:'pie', height:36, sliceColors:['#f0f0f0','#4BC0C0']}" class="sparkline inline"><canvas width="36" height="36" style="display: inline-block; width: 36px; height: 36px; vertical-align: top;"></canvas></span></div>
-                <div class="clear">
-                    <h4 class="m-a-0 text-md"><a href="#">60% <span class="text-sm">Increase</span></a></h4><small class="text-muted">38 Shipped.</small></div>
-            </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="box p-a">
-                <div class="pull-right m-l"><span class="m-y-sm inline" data-ui-jp="sparkline" data-ui-options="[[2,8],[4,6],[6,4],[8,2],[10,0],[8,2],[6,4],[4,6],[2,8]], {type:'bar', height:24, barWidth:4, barSpacing:2, stackedBarColor:['#4BC0C0', 'rgba(255,255,255,0.2)']}"><canvas width="52" height="24" style="display: inline-block; width: 52px; height: 24px; vertical-align: top;"></canvas></span></div>
-                <div class="clear">
-                    <h4 class="m-a-0 text-md"><a href="#">25% <span class="text-sm">Decrease</span></a></h4><small class="text-muted">632 activities post.</small></div>
-            </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-3">
-            <div class="box p-a">
-                <div class="pull-right m-l"><span class="m-y-sm inline" data-ui-jp="sparkline" data-ui-options="[1,1,0,1,-1,-1,1,-1,0,0,1,1], {type:'tristate', height:24, width: 'auto', type: 'tristate', colorMap: {'-1': '#4BC0C0', '1': '#4BC0C0'}}"><canvas width="59" height="24" style="display: inline-block; width: 59px; height: 24px; vertical-align: top;"></canvas></span></div>
-                <div class="clear">
-                    <h4 class="m-a-0 text-md"><a href="#">10% <span class="text-sm">up</span></a></h4><small class="text-muted">Caculate 2hs ago.</small></div>
+                <div class="box-header">
+                    <h2>This Month</h2>
+                    <small>Number of Hours Spent on Attending Service Request</small>
+                    <div class="box-tool">
+                        <ul class="nav">
+                            <li class="nav-item inline">
+                                <a class="nav-link">
+                                  <i  class="icon-reload"></i>
+                                </a>
+                            </li>
+                            <li class="nav-item inline">
+                                <a class="nav-link p-l-xs">
+                                  <i class="icon-frame"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="box-body">
+                    <h4 class="m-a-0 text-4x"><a href="#">
+                        100 <span class="text-sm text-muted">Hours</span>
+                        15 <span class="text-sm text-muted">Minutes</span></a>
+                    </h4>
+                </div>
             </div>
         </div>
     </div>
