--- a/app/views/dashboards/_partials/standings_filter.html
+++ b/app/views/dashboards/_partials/standings_filter.html
@@ -37,7 +37,7 @@
         <div class="col-md-12">
           <div class="p-a p-l-none">
             <h6 class="m-a-0">
-              Jurisdiction
+              Area
             </h6>
           </div>
         </div>
